gen/vault/v1/generator-errors.log
    Blocking waiting for file lock on build directory
    Checking google-vault1 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/vault/v1/lib)
error[E0433]: failed to resolve: unresolved import
    --> gen/vault/v1/lib/src/lib.rs:5390:33
     |
5390 |             view: Option<crate::holds::params::GetView>,
     |                                 ^^^^^
     |                                 |
     |                                 unresolved import
     |                                 help: a similar path exists: `crate::matters::holds`

error[E0433]: failed to resolve: unresolved import
    --> gen/vault/v1/lib/src/lib.rs:5405:50
     |
5405 |             pub fn view(&mut self, value: crate::holds::params::GetView) -> &mut Self {
     |                                                  ^^^^^
     |                                                  |
     |                                                  unresolved import
     |                                                  help: a similar path exists: `crate::matters::holds`

error[E0433]: failed to resolve: unresolved import
    --> gen/vault/v1/lib/src/lib.rs:5528:33
     |
5528 |             view: Option<crate::holds::params::ListView>,
     |                                 ^^^^^
     |                                 |
     |                                 unresolved import
     |                                 help: a similar path exists: `crate::matters::holds`

error[E0433]: failed to resolve: unresolved import
    --> gen/vault/v1/lib/src/lib.rs:5553:50
     |
5553 |             pub fn view(&mut self, value: crate::holds::params::ListView) -> &mut Self {
     |                                                  ^^^^^
     |                                                  |
     |                                                  unresolved import
     |                                                  help: a similar path exists: `crate::matters::holds`

error[E0423]: expected value, found struct `exports::ExportsActions`
    --> gen/vault/v1/lib/src/lib.rs:2606:13
     |
2606 |             exports::ExportsActions
     |             ^^^^^^^^^^^^^^^^^^^^^^^ did you mean `exports::ExportsActions { /* fields */ }`?

error[E0423]: expected value, found struct `holds::HoldsActions`
    --> gen/vault/v1/lib/src/lib.rs:2610:13
     |
2610 |             holds::HoldsActions
     |             ^^^^^^^^^^^^^^^^^^^ did you mean `holds::HoldsActions { /* fields */ }`?

error[E0423]: expected value, found struct `saved_queries::SavedQueriesActions`
    --> gen/vault/v1/lib/src/lib.rs:2614:13
     |
2614 |             saved_queries::SavedQueriesActions
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `saved_queries::SavedQueriesActions { /* fields */ }`?

error[E0423]: expected value, found struct `accounts::AccountsActions`
    --> gen/vault/v1/lib/src/lib.rs:4985:17
     |
4985 |                 accounts::AccountsActions
     |                 ^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `accounts::AccountsActions { /* fields */ }`?

warning: unreachable expression
    --> gen/vault/v1/lib/src/lib.rs:2292:17
     |
2292 | /                 Ok(match value {
2293 | |                     _ => {
2294 | |                         return Err(::serde::de::Error::custom(format!(
2295 | |                             "invalid enum for #name: {}",
...    |
2298 | |                     }
2299 | |                 })
     | |__________________^
     |
     = note: #[warn(unreachable_code)] on by default

warning: unreachable expression
    --> gen/vault/v1/lib/src/lib.rs:2328:17
     |
2328 | /                 Ok(match value {
2329 | |                     _ => {
2330 | |                         return Err(::serde::de::Error::custom(format!(
2331 | |                             "invalid enum for #name: {}",
...    |
2334 | |                     }
2335 | |                 })
     | |__________________^

warning: unreachable expression
    --> gen/vault/v1/lib/src/lib.rs:2364:17
     |
2364 | /                 Ok(match value {
2365 | |                     _ => {
2366 | |                         return Err(::serde::de::Error::custom(format!(
2367 | |                             "invalid enum for #name: {}",
...    |
2370 | |                     }
2371 | |                 })
     | |__________________^

warning: unreachable expression
    --> gen/vault/v1/lib/src/lib.rs:4758:21
     |
4758 | /                     Ok(match value {
4759 | |                         _ => {
4760 | |                             return Err(::serde::de::Error::custom(format!(
4761 | |                                 "invalid enum for #name: {}",
...    |
4764 | |                         }
4765 | |                     })
     | |______________________^

warning: unreachable expression
    --> gen/vault/v1/lib/src/lib.rs:4794:21
     |
4794 | /                     Ok(match value {
4795 | |                         _ => {
4796 | |                             return Err(::serde::de::Error::custom(format!(
4797 | |                                 "invalid enum for #name: {}",
...    |
4800 | |                         }
4801 | |                     })
     | |______________________^

error: aborting due to 8 previous errors

Some errors have detailed explanations: E0423, E0433.
For more information about an error, try `rustc --explain E0423`.
error: Could not compile `google-vault1`.

To learn more, run the command again with --verbose.
